// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Group landing listing Content renders correctly 1`] = `
<jest>
  <main>
    <div
      class="container mt-4 mt-md-5"
    >
      <div
        class="p-md-3-5 pt-3 bg-light d-md-flex n-mx-container"
      >
        <h2
          class="mb-0 d-inline-block fw-bold"
        >
          Group Name
        </h2>
        <div
          class="d-grid d-md-block ms-auto"
        >
          <button
            aria-expanded="false"
            autocomplete="off"
            class="d-inline-block mt-3 mt-md-0 mb-4 mb-md-0 dropdown-toggle btn btn-primary btn-md"
            data-bs-toggle="dropdown"
            id="dropdown-1"
            type="button"
          >
            Create content
          </button>
          <ul
            aria-labelledby="dropdown-1"
            class="dropdown-menu"
          >
            <li>
              <a
                class="dropdown-item"
                href="#"
              >
                I'm a link
              </a>
            </li>
            <li>
              <button
                class="dropdown-item"
                type="button"
              >
                I'm a button
              </button>
            </li>
            <li>
              <hr
                class="dropdown-divider"
              />
            </li>
            <li>
              <button
                aria-disabled="true"
                class="dropdown-item"
                disabled="true"
                type="button"
              >
                I'm a disabled button
              </button>
            </li>
            <li>
              <button
                class="dropdown-item active"
                type="button"
              >
                I'm a active button
              </button>
            </li>
          </ul>
        </div>
      </div>
      <nav
        class="bcl__nav bg-gray mb-3-5 mb-lg-5 n-mx-container nav nav-tabs"
      >
        <a
          class="nav-link"
          href="/example.html"
        >
          Home
        </a>
        <a
          class="nav-link"
          href="/example.html"
        >
          Members
        </a>
        <a
          class="nav-link active"
          href="/example.html"
        >
          Content
        </a>
        <a
          aria-expanded="false"
          class="nav-link dropdown-toggle"
          data-bs-toggle="dropdown"
          href="#"
          id="dropdown-1"
          role="button"
        >
          Links
        </a>
        <ul
          aria-labelledby="dropdown-1"
          class="dropdown-menu"
        >
          <li>
            <a
              class="dropdown-item"
              href="/example.html"
            >
              I'm a link
            </a>
          </li>
          <li>
            <button
              class="dropdown-item"
              type="button"
            >
              I'm a button
            </button>
          </li>
          <li>
            <hr
              class="dropdown-divider"
            />
          </li>
          <li>
            <button
              aria-disabled="true"
              class="dropdown-item"
              disabled="true"
              type="button"
            >
              I'm a disabled button
            </button>
          </li>
          <li>
            <button
              class="dropdown-item active"
              type="button"
            >
              I'm a active button
            </button>
          </li>
        </ul>
        <a
          class="nav-link"
          href="/example.html"
        >
          Link
        </a>
      </nav>
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          <div
            aria-labelledby="offcanvasExampleLabel"
            class="bcl-offcanvas offcanvas-start offcanvas"
            data-bs-scroll="true"
            id="bcl-offcanvas"
            tabindex="-1"
          >
            <div
              class="offcanvas-header pb-2-5 p-lg-0"
            >
              <h4
                class="offcanvas-title mb-lg-4"
                id="offcanvasExampleLabel"
              >
                Filter options
              </h4>
              <button
                class="btn-close text-reset d-lg-none"
                data-bs-dismiss="offcanvas"
                type="button"
              />
            </div>
            <div
              class="offcanvas-body p-lg-0"
            >
              <form
                novalidate="true"
                onsubmit="return false;"
              >
                <div
                  class="mb-3"
                >
                  <label
                    class="form-label"
                  >
                    Content types
                  </label>
                  <select
                    class="form-select"
                  >
                    <option
                      value="1"
                    >
                      a select option
                    </option>
                    <option
                      value="2"
                    >
                      another select option
                    </option>
                    <option
                      value="3"
                    >
                      another option
                    </option>
                    <option
                      value="4"
                    >
                      last option
                    </option>
                    <option
                      selected=""
                      value=""
                    >
                      the selected option
                    </option>
                  </select>
                </div>
                <div
                  class="mb-3"
                >
                  <label
                    class="form-label"
                  >
                    Filter A
                  </label>
                  <select
                    class="multi-select"
                    multiple="true"
                  >
                    <option
                      value="1"
                    >
                      a select option
                    </option>
                    <option
                      value="2"
                    >
                      another select option
                    </option>
                    <option
                      value="3"
                    >
                      another option
                    </option>
                    <option
                      value="4"
                    >
                      last option
                    </option>
                    <option
                      selected=""
                      value=""
                    >
                      the selected option
                    </option>
                  </select>
                </div>
                <fieldset
                  class="mb-3"
                >
                  <legend
                    class="col-form-label"
                  >
                    Filter B
                  </legend>
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="form-check"
                    >
                      <input
                        checked="true"
                        class="form-check-input"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                      >
                        Checked checkbox
                      </label>
                    </div>
                    <div
                      class="form-check"
                    >
                      <input
                        class="form-check-input"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                      >
                        Default checkbox
                      </label>
                    </div>
                  </div>
                </fieldset>
                <fieldset>
                  <legend
                    class="col-form-label"
                  >
                    Creation date (from)
                  </legend>
                  <input
                    class="mb-2 form-control"
                    type="date"
                  />
                </fieldset>
                <fieldset
                  class="mb-3"
                >
                  <legend
                    class="col-form-label"
                  >
                    Creation date (to)
                  </legend>
                  <input
                    class="mb-2 form-control"
                    type="date"
                  />
                </fieldset>
                <div
                  class="mt-4 d-grid d-md-block"
                >
                  <button
                    class="me-md-3 mb-3-5 mb-md-0 btn btn-primary btn-md"
                    type="submit"
                  >
                    Refine
                  </button>
                  <button
                    class="btn btn-light btn-md"
                    type="submit"
                  >
                    Clear
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="col-12 col-lg-9"
        >
          <button
            aria-controls="bcl-offcanvas"
            class="d-lg-none w-100 mb-3-5 btn btn-light btn-md"
            data-bs-target="#bcl-offcanvas"
            data-bs-toggle="offcanvas"
            type="button"
          >
            <svg
              class="ms-2 me-2-5 bi icon--fluid"
            >
              <use
                xlink:href="#filter"
              />
            </svg>
            Filter options
          </button>
          <div
            class="mb-3 mb-md-4 clearfix"
          >
            <div
              class="float-end d-none d-md-flex align-items-baseline"
            >
              <label
                class="form-label"
              >
                Sort by
              </label>
              <select
                class="mb-4 mb-md-0 ms-md-4 form-select"
              >
                <option
                  value="1"
                >
                  a select option
                </option>
                <option
                  value="2"
                >
                  another select option
                </option>
                <option
                  value="3"
                >
                  another option
                </option>
                <option
                  value="4"
                >
                  last option
                </option>
                <option
                  selected=""
                  value=""
                >
                  Joined date
                </option>
              </select>
            </div>
            <h4
              class="mb-4"
            >
              Content in the group (18)
            </h4>
            <span
              class="me-2 text-dark mb-2 badge bg-light"
            >
              Group name
            </span>
            <span
              class="me-2 text-dark mb-2 badge bg-light"
            >
              Restricted
              <span
                aria-hidden="true"
                class="icon--close"
              >
                <svg
                  class="bi icon--s"
                >
                  <use
                    xlink:href="#x"
                  />
                </svg>
              </span>
            </span>
            <span
              class="me-2 text-dark mb-2 badge bg-light"
            >
              Private
              <span
                aria-hidden="true"
                class="icon--close"
              >
                <svg
                  class="bi icon--s"
                >
                  <use
                    xlink:href="#x"
                  />
                </svg>
              </span>
            </span>
          </div>
          <hr
            class="d-none d-md-block mt-4 mb-4-75"
          />
          <div
            class="d-md-none"
          >
            <label
              class="form-label"
            >
              Sort by
            </label>
            <select
              class="mb-4 mb-md-0 ms-md-4 form-select"
            >
              <option
                value="1"
              >
                a select option
              </option>
              <option
                value="2"
              >
                another select option
              </option>
              <option
                value="3"
              >
                another option
              </option>
              <option
                value="4"
              >
                last option
              </option>
              <option
                selected=""
                value=""
              >
                Joined date
              </option>
            </select>
          </div>
          <div
            class="bcl-listing bcl-listing--default-1-col"
          >
            <div
              class="row row-cols-1 g-4"
            >
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text mb-2"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                        <div>
                          <span
                            class="text-muted me-4"
                          >
                            8 hours ago
                          </span>
                          <span
                            class="text-muted me-4"
                          >
                            1 comment
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text mb-2"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                        <div>
                          <span
                            class="text-muted me-4"
                          >
                            8 hours ago
                          </span>
                          <span
                            class="text-muted me-4"
                          >
                            1 comment
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text mb-2"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                        <div>
                          <span
                            class="text-muted me-4"
                          >
                            8 hours ago
                          </span>
                          <span
                            class="text-muted me-4"
                          >
                            1 comment
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text mb-2"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                        <div>
                          <span
                            class="text-muted me-4"
                          >
                            8 hours ago
                          </span>
                          <span
                            class="text-muted me-4"
                          >
                            1 comment
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text mb-2"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                        <div>
                          <span
                            class="text-muted me-4"
                          >
                            8 hours ago
                          </span>
                          <span
                            class="text-muted me-4"
                          >
                            1 comment
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text mb-2"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                        <div>
                          <span
                            class="text-muted me-4"
                          >
                            8 hours ago
                          </span>
                          <span
                            class="text-muted me-4"
                          >
                            1 comment
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="d-none d-md-block mb-4-5"
          />
          <nav
            class="my-5"
          >
            <ul
              class="pagination justify-content-center"
            >
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  Previous
                </a>
              </li>
              <li
                class="page-item active"
              >
                <a
                  aria-current="page"
                  class="page-link"
                  href="#"
                >
                  1
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  2
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  3
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  Next
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </main>
</jest>
`;

exports[`OE - Group landing listing Member renders correctly 1`] = `
<jest>
  <main>
    <div
      class="container mt-4 mt-md-5"
    >
      <div
        class="p-md-3-5 pt-3 bg-light d-md-flex n-mx-container"
      >
        <h2
          class="mb-0 d-inline-block fw-bold"
        >
          Group Name
        </h2>
        <div
          class="d-grid d-md-block ms-auto"
        >
          <button
            aria-expanded="false"
            autocomplete="off"
            class="d-inline-block mt-3 mt-md-0 mb-4 mb-md-0 dropdown-toggle btn btn-primary btn-md"
            data-bs-toggle="dropdown"
            id="dropdown-1"
            type="button"
          >
            Create content
          </button>
          <ul
            aria-labelledby="dropdown-1"
            class="dropdown-menu"
          >
            <li>
              <a
                class="dropdown-item"
                href="#"
              >
                I'm a link
              </a>
            </li>
            <li>
              <button
                class="dropdown-item"
                type="button"
              >
                I'm a button
              </button>
            </li>
            <li>
              <hr
                class="dropdown-divider"
              />
            </li>
            <li>
              <button
                aria-disabled="true"
                class="dropdown-item"
                disabled="true"
                type="button"
              >
                I'm a disabled button
              </button>
            </li>
            <li>
              <button
                class="dropdown-item active"
                type="button"
              >
                I'm a active button
              </button>
            </li>
          </ul>
        </div>
      </div>
      <nav
        class="bcl__nav bg-gray mb-3-5 mb-lg-5 n-mx-container nav nav-tabs"
      >
        <a
          class="nav-link"
          href="/example.html"
        >
          Home
        </a>
        <a
          class="nav-link active"
          href="/example.html"
        >
          Members
        </a>
        <a
          class="nav-link"
          href="/example.html"
        >
          Content
        </a>
        <a
          aria-expanded="false"
          class="nav-link dropdown-toggle"
          data-bs-toggle="dropdown"
          href="#"
          id="dropdown-1"
          role="button"
        >
          Links
        </a>
        <ul
          aria-labelledby="dropdown-1"
          class="dropdown-menu"
        >
          <li>
            <a
              class="dropdown-item"
              href="/example.html"
            >
              I'm a link
            </a>
          </li>
          <li>
            <button
              class="dropdown-item"
              type="button"
            >
              I'm a button
            </button>
          </li>
          <li>
            <hr
              class="dropdown-divider"
            />
          </li>
          <li>
            <button
              aria-disabled="true"
              class="dropdown-item"
              disabled="true"
              type="button"
            >
              I'm a disabled button
            </button>
          </li>
          <li>
            <button
              class="dropdown-item active"
              type="button"
            >
              I'm a active button
            </button>
          </li>
        </ul>
        <a
          class="nav-link"
          href="/example.html"
        >
          Link
        </a>
      </nav>
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          <div
            aria-labelledby="offcanvasExampleLabel"
            class="bcl-offcanvas offcanvas-start offcanvas"
            data-bs-scroll="true"
            id="bcl-offcanvas"
            tabindex="-1"
          >
            <div
              class="offcanvas-header pb-2-5 p-lg-0"
            >
              <h4
                class="offcanvas-title mb-lg-4"
                id="offcanvasExampleLabel"
              >
                Filter options
              </h4>
              <button
                class="btn-close text-reset d-lg-none"
                data-bs-dismiss="offcanvas"
                type="button"
              />
            </div>
            <div
              class="offcanvas-body p-lg-0"
            >
              <form
                novalidate="true"
                onsubmit="return false;"
              >
                <fieldset
                  class="mb-3"
                >
                  <legend
                    class="col-form-label"
                  >
                    Search by name
                  </legend>
                  <div
                    class="col-sm-10"
                  >
                    <input
                      class="form-control"
                      placeholder="Name"
                      type="text"
                    />
                  </div>
                </fieldset>
                <fieldset
                  class="mb-3"
                >
                  <legend
                    class="col-form-label"
                  >
                    Search by email
                  </legend>
                  <div
                    class="col-sm-10"
                  >
                    <input
                      class="form-control"
                      placeholder="Email"
                      type="text"
                    />
                  </div>
                </fieldset>
                <div
                  class="mt-4 d-grid d-md-block"
                >
                  <button
                    class="me-md-3 mb-3-5 mb-md-0 btn btn-primary btn-md"
                    type="submit"
                  >
                    Refine
                  </button>
                  <button
                    class="btn btn-light btn-md"
                    type="submit"
                  >
                    Clear
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="col-12 col-lg-9"
        >
          <button
            aria-controls="bcl-offcanvas"
            class="d-lg-none w-100 mb-3-5 btn btn-light btn-md"
            data-bs-target="#bcl-offcanvas"
            data-bs-toggle="offcanvas"
            type="button"
          >
            <svg
              class="ms-2 me-2-5 bi icon--fluid"
            >
              <use
                xlink:href="#filter"
              />
            </svg>
            Filter options
          </button>
          <div
            class="mb-3 mb-md-4 clearfix"
          >
            <div
              class="float-end d-none d-md-flex align-items-baseline"
            >
              <label
                class="form-label"
              >
                Sort by
              </label>
              <select
                class="mb-4 mb-md-0 ms-md-4 form-select"
              >
                <option
                  value="1"
                >
                  a select option
                </option>
                <option
                  value="2"
                >
                  another select option
                </option>
                <option
                  value="3"
                >
                  another option
                </option>
                <option
                  value="4"
                >
                  last option
                </option>
                <option
                  selected=""
                  value=""
                >
                  Joined date
                </option>
              </select>
            </div>
            <h4
              class="mb-4"
            >
              Group members (18)
            </h4>
            <span
              class="me-2 text-dark badge bg-light"
            >
              Group name
            </span>
          </div>
          <hr
            class="d-none d-md-block mt-4 mb-4-75"
          />
          <div
            class="d-md-none"
          >
            <label
              class="form-label"
            >
              Sort by
            </label>
            <select
              class="mb-4 mb-md-0 ms-md-4 form-select"
            >
              <option
                value="1"
              >
                a select option
              </option>
              <option
                value="2"
              >
                another select option
              </option>
              <option
                value="3"
              >
                another option
              </option>
              <option
                value="4"
              >
                last option
              </option>
              <option
                selected=""
                value=""
              >
                Joined date
              </option>
            </select>
          </div>
          <div
            class="bcl-listing bcl-listing--default-1-col"
          >
            <div
              class="row row-cols-1 g-4"
            >
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Stefan Mayer
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Adjur Tichar
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Szép Mara
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Daniel Cardoso Rocha
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Aurelia Panicucci
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Felicyta Kowalska
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Lorenzo Olson
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Nino Treviño Montalvo
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          José Luis Pabón Barrios
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded align-self-center"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top mt-3 mt-md-0"
                        src="https://picsum.photos/200/160?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10 align-self-center"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Maddison Marsh
                        </a>
                        <div>
                          <span
                            class="text-muted me-2"
                          >
                            DG Demo
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Director
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            class="d-none d-md-block mb-4-5"
          />
          <nav
            class="my-5"
          >
            <ul
              class="pagination justify-content-center"
            >
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  Previous
                </a>
              </li>
              <li
                class="page-item active"
              >
                <a
                  aria-current="page"
                  class="page-link"
                  href="#"
                >
                  1
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  2
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  3
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  Next
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </main>
</jest>
`;

exports[`OE - Group landing listing renders correctly 1`] = `
<jest>
  <main>
    <div
      class="container mt-4 mt-md-5"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
        >
          <div
            aria-labelledby="offcanvasExampleLabel"
            class="bcl-offcanvas offcanvas-start offcanvas"
            data-bs-scroll="true"
            id="bcl-offcanvas"
            tabindex="-1"
          >
            <div
              class="offcanvas-header pb-2-5 p-lg-0"
            >
              <h4
                class="offcanvas-title mb-lg-4"
                id="offcanvasExampleLabel"
              >
                Filter options
              </h4>
              <button
                class="btn-close text-reset d-lg-none"
                data-bs-dismiss="offcanvas"
                type="button"
              />
            </div>
            <div
              class="offcanvas-body p-lg-0"
            >
              <form
                novalidate="true"
                onsubmit="return false;"
              >
                <fieldset
                  class="mb-3"
                >
                  <legend
                    class="col-form-label mb-2"
                  >
                    Group type
                  </legend>
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="mb-3"
                    >
                      <div
                        class="form-check"
                      >
                        <input
                          checked="true"
                          class="form-check-input"
                          type="checkbox"
                        />
                        <label
                          class="form-check-label"
                        >
                          Public groups
                        </label>
                      </div>
                    </div>
                    <div
                      class="mb-3"
                    >
                      <div
                        class="form-check"
                      >
                        <input
                          checked="true"
                          class="form-check-input"
                          type="checkbox"
                        />
                        <label
                          class="form-check-label"
                        >
                          Restricted groups
                        </label>
                      </div>
                    </div>
                    <div
                      class="form-check"
                    >
                      <input
                        class="form-check-input"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                      >
                        Private groups
                      </label>
                    </div>
                  </div>
                </fieldset>
                <fieldset>
                  <legend
                    class="col-form-label"
                  >
                    Creation date (from)
                  </legend>
                  <input
                    class="mb-2 form-control"
                    type="date"
                  />
                </fieldset>
                <fieldset
                  class="mb-3"
                >
                  <legend
                    class="col-form-label"
                  >
                    Creation date (to)
                  </legend>
                  <input
                    class="mb-2 form-control"
                    type="date"
                  />
                </fieldset>
                <div
                  class="mt-4 d-grid d-md-block"
                >
                  <button
                    class="me-md-3 mb-3-5 mb-md-0 btn btn-primary btn-md"
                    type="submit"
                  >
                    Refine
                  </button>
                  <button
                    class="btn btn-light btn-md"
                    type="submit"
                  >
                    Clear
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="col-12 col-lg-9"
        >
          <button
            aria-controls="bcl-offcanvas"
            class="d-lg-none w-100 mb-3-5 btn btn-light btn-md"
            data-bs-target="#bcl-offcanvas"
            data-bs-toggle="offcanvas"
            type="button"
          >
            <svg
              class="ms-2 me-2-5 bi icon--fluid"
            >
              <use
                xlink:href="#filter"
              />
            </svg>
            Filter options
          </button>
          <div
            class="mb-3 mb-md-4 clearfix"
          >
            <div
              class="float-end d-none d-md-flex align-items-baseline"
            >
              <label
                class="form-label"
              >
                Sort by
              </label>
              <select
                class="mb-4 mb-md-0 ms-md-4 form-select"
              >
                <option
                  value="1"
                >
                  a select option
                </option>
                <option
                  value="2"
                >
                  another select option
                </option>
                <option
                  value="3"
                >
                  another option
                </option>
                <option
                  value="4"
                >
                  last option
                </option>
                <option
                  selected=""
                  value=""
                >
                  Name
                </option>
              </select>
            </div>
            <h4
              class="mb-4"
            >
              Groups (38)
            </h4>
            <span
              class="me-2 text-dark mb-2 badge bg-light"
            >
              Public
              <span
                aria-hidden="true"
                class="icon--close"
              >
                <svg
                  class="bi icon--s"
                >
                  <use
                    xlink:href="#x"
                  />
                </svg>
              </span>
            </span>
            <span
              class="me-2 text-dark mb-2 badge bg-light"
            >
              Restricted
              <span
                aria-hidden="true"
                class="icon--close"
              >
                <svg
                  class="bi icon--s"
                >
                  <use
                    xlink:href="#x"
                  />
                </svg>
              </span>
            </span>
            <span
              class="me-2 text-dark mb-2 badge bg-light"
            >
              Private
              <span
                aria-hidden="true"
                class="icon--close"
              >
                <svg
                  class="bi icon--s"
                >
                  <use
                    xlink:href="#x"
                  />
                </svg>
              </span>
            </span>
          </div>
          <hr
            class="d-none d-md-block mt-4 mb-4-75"
          />
          <div
            class="d-md-none"
          >
            <label
              class="form-label"
            >
              Sort by
            </label>
            <select
              class="mb-4 mb-md-0 ms-md-4 form-select"
            >
              <option
                value="1"
              >
                a select option
              </option>
              <option
                value="2"
              >
                another select option
              </option>
              <option
                value="3"
              >
                another option
              </option>
              <option
                value="4"
              >
                last option
              </option>
              <option
                selected=""
                value=""
              >
                Name
              </option>
            </select>
          </div>
          <div
            class="bcl-listing bcl-listing--default-1-col"
          >
            <div
              class="row row-cols-1 g-4"
            >
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="col"
              >
                <div
                  class="listing-item mb-md-3 border-0 border-bottom-mobile card"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-md-3 col-lg-2 rounded"
                    >
                      <img
                        alt="alt img"
                        class="card-img-top d-none d-md-block"
                        src="https://picsum.photos/200/200?random=1"
                      />
                    </div>
                    <div
                      class="col-md-9 col-lg-10"
                    >
                      <div
                        class="card-body pb-4-5 px-0 p-md-0 pt-sm-3"
                      >
                        <div
                          class="mb-3"
                        >
                          <span
                            class="badge bg-primary"
                          >
                            Public
                          </span>
                        </div>
                        <a
                          class="card-title mb-3 h5 text-underline-hover d-block"
                          href="example.html"
                        >
                          Group name
                        </a>
                        <p
                          class="card-text"
                        >
                          Some quick example text to build on the card and title and make up the bulk of the cards content.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <nav
            class="mt-5"
          >
            <ul
              class="pagination justify-content-center"
            >
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  Previous
                </a>
              </li>
              <li
                class="page-item active"
              >
                <a
                  aria-current="page"
                  class="page-link"
                  href="#"
                >
                  1
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  2
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  3
                </a>
              </li>
              <li
                class="page-item"
              >
                <a
                  class="page-link"
                  href="#"
                >
                  Next
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </main>
</jest>
`;
